--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "puppeteer-es6modules-babel-jest-assert",
+  "name": "puppeteer-es6-modules-babeljs-jest-assert",
   "version": "1.0.0",
-  "description": "Puppeteer end-to-end test automation boilerplate project. Using ES6 modules, babel and jest.",
+  "description": "Puppeteer end-to-end test automation boilerplate, using ES6 modules, BabelJS, Jest and Assert.",
   "scripts": {
-    "test": "jest",
-    "lint": "npx eslint --ext .js ./ --fix"
+    "lint": "npx eslint --ext .js ./ --fix",
+    "test": "jest"
   },
   "keywords": [
     "puppeteer",
-    "es6 modules",
+    "es6",
+    "e2e",
     "babel",
     "jest",
     "boilerplate",
-    "example"
+    "example",
+    "e2e test"
   ],
   "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
   "license": "MIT",
