--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "author": "",
-  "description": "Puppeteer end-to-end test automation boilerplate, using ES6 modules, BabelJS, Jest and Assert.",
+  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "description": "puppeteer end-to-end test automation boilerplate.",
   "devDependencies": {
     "@babel/core": "7.8.7",
     "@babel/plugin-transform-runtime": "7.8.3",
@@ -27,7 +27,12 @@
   "keywords": [
     "assert",
     "babeljs",
+    "boilerplate",
+    "e2e",
+    "e2e tests",
     "es",
+    "example",
+    "integration test",
     "jest",
     "puppeteer"
   ],
