--- a/package.json
+++ b/package.json
@@ -1,50 +1,1 @@
-{
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
-  "description": "puppeteer end-to-end test automation boilerplate.",
-  "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/plugin-transform-runtime": "7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/runtime": "7.8.7",
-    "babel-jest": "25.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-json": "2.1.0",
-    "eslint-plugin-prettier": "3.1.2",
-    "husky": "4.2.3",
-    "jest": "25.1.0",
-    "prettier": "1.19.1",
-    "pretty-quick": "2.0.1",
-    "puppeteer": "2.1.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "keywords": [
-    "assert",
-    "babeljs",
-    "boilerplate",
-    "e2e",
-    "e2e tests",
-    "es",
-    "example",
-    "integration test",
-    "jest",
-    "puppeteer"
-  ],
-  "license": "MIT",
-  "name": "puppeteer-es-modules-babeljs-jest-assert",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/e2e-boilerplates/puppeteer-es-modules-babeljs-jest-assert.git"
-  },
-  "scripts": {
-    "lint": "npx eslint --ext .js ./ --fix",
-    "test": "jest"
-  },
-  "version": "1.0.0"
-}
+{"author":"Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)","bugs":{"url":"https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert/issues"},"description":"Puppeteer end-to-end test automation boilerplate. using Using ES Modules, Babel, Jest and Assert.","devDependencies":{"@babel/core":"7.8.7","@babel/plugin-transform-runtime":"7.8.3","@babel/preset-env":"7.8.7","@babel/runtime":"7.8.7","babel-jest":"25.1.0","eslint":"6.8.0","eslint-config-airbnb-base":"14.0.0","eslint-config-prettier":"6.10.0","eslint-plugin-import":"2.20.1","eslint-plugin-json":"2.1.0","eslint-plugin-prettier":"3.1.2","husky":"4.2.3","jest":"25.1.0","prettier":"1.19.1","pretty-quick":"2.0.1","puppeteer":"2.1.1"},"homepage":"https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert#readme","husky":{"hooks":{"pre-commit":"pretty-quick --staged"}},"keywords":["assert","babel","boilerplate","e2e","e2e tests","example","integration test","jest","puppeteer"],"license":"MIT","name":"puppeteer-es-modules-babel-jest-assert","repository":{"type":"git","url":"git+https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert.git"},"scripts":{"lint":"npx eslint --ext .js ./ --fix","test":"jest"},"version":"1.0.0"}
