--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert/issues"
   },
+  "dependencies": {},
   "description": "Puppeteer end-to-end test automation boilerplate. using ES Modules, Babel, Jest and Assert.",
   "devDependencies": {
     "@babel/core": "7.9.0",
@@ -30,11 +31,6 @@
   "keywords": [
     "assert",
     "babel",
-    "boilerplate",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test",
     "jest",
     "puppeteer"
   ],
@@ -48,6 +44,5 @@
     "lint": "npx eslint --ext .js ./ --fix",
     "test": "jest"
   },
-  "version": "1.0.0",
-  "dependencies": {}
+  "version": "1.0.0"
 }
