--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jest": "25.1.0",
+    "puppeteer": "2.1.1"
+  },
   "description": "Puppeteer end-to-end test automation boilerplate. using ES Modules, Babel, Jest and Assert.",
   "devDependencies": {
+    "@babel/cli": "7.8.4",
     "@babel/core": "7.9.0",
     "@babel/plugin-transform-runtime": "7.9.0",
     "@babel/preset-env": "7.9.0",
+    "@babel/register": "7.9.0",
     "@babel/runtime": "7.9.2",
     "babel-jest": "25.1.0",
     "eslint": "6.8.0",
@@ -17,10 +22,8 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.3",
-    "jest": "25.1.0",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.1",
-    "puppeteer": "2.1.1"
+    "pretty-quick": "2.0.1"
   },
   "homepage": "https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert#readme",
   "husky": {
