--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Girma Nigusse <xgirma@gmail.com>",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert/issues"
   },
@@ -7,7 +7,7 @@
     "jest": "25.1.0",
     "puppeteer": "2.1.1"
   },
-  "description": "Puppeteer end-to-end test automation boilerplate. using ES Modules, Babel, Jest and Assert.",
+  "description": "Puppeteer end-to-end test automation boilerplate. Using ES Modules, Babel, Jest and Assert.",
   "devDependencies": {
     "@babel/cli": "7.8.4",
     "@babel/core": "7.9.0",
@@ -18,7 +18,7 @@
     "babel-jest": "25.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
-    "eslint-config-prettier": "6.10.1",
+    "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.3",
@@ -34,6 +34,11 @@
   "keywords": [
     "assert",
     "babel",
+    "boilerplate",
+    "e2e",
+    "e2e tests",
+    "example",
+    "integration test",
     "jest",
     "puppeteer"
   ],
