--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,8 +1,8 @@
 name: puppeteer-es-modules-babel-jest-assert
-"on":
+'on':
   push: null
   schedule:
-    - cron: 20 2 1-31/2 * *
+    - cron: 50 5 1-31/2 * *
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: "npm:install"
+      - name: 'npm:install'
         run: npm install
         env:
           CI: true
