--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/e2e-boilerplate/puppeteer-es-modules-babel-jest-assert#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint-staged"
     }
   },
   "keywords": [
@@ -43,6 +43,11 @@
     "puppeteer"
   ],
   "license": "MIT",
+  "lint-staged": {
+    "*.{js,json,md}": [
+      "prettier --write"
+    ]
+  },
   "name": "puppeteer-es-modules-babel-jest-assert",
   "repository": {
     "type": "git",
