--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "es modules",
     "jest",
     "puppeteer",
+    "puppeteer automation",
+    "puppeteer boilerplate",
+    "puppeteer example",
     "e2e",
     "e2e tests",
     "boilerplate",
